; ModuleID = '/home/carl/AnghaBench/TDengine/src/os/darwin/src/extr_tdarwin.c_taosInitTcpServer.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/os/darwin/src/extr_tdarwin.c_taosInitTcpServer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [70 x i8] c"function taosInitTcpServer is not implemented in darwin system, exit!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @taosInitTcpServer(i8* %0, i16 signext %1, i8* %2, i32 %3, i8* %4, i8* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i16, align 2
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  store i8* %0, i8** %7, align 8
  store i16 %1, i16* %8, align 2
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  store i8* %5, i8** %12, align 8
  %13 = call i32 @tError(i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @tError(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
